# rustycloudspool

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yaml
src/: core.rs  handlers.rs  lib.rs
tests/: aws_integration_tests.rs  azure_integration_tests.rs  integration_tests.rs
